--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <DOCTYPE html>
-<html>
-<head>
-<title>Meal Idea Generator</title>
-</head>
-<h1>Meal Idea Generator</h1>
-<div class="container">
-  <div>
+  <html>
+    <head>
+      <title>Meal Idea Generator</title>
+      <script src="script.js"></script>
+      <link rel="stylesheet" href="styles.css">
+    </head>
+    <h1>Meal Idea Generator</h1>
+    <div class="container">
+    <div>
     <button type="button" class="btn" onclick="generate();">
       Generate
     </button>
-  </div>
-  <div class="random">
+    </div>
+    <div class="random">
     <ul id="adjective">
     </ul>
     <ul id="noun">
